FIX: Rydder bort ubrukte regelfelter, og rydder i mappere (#4602)